# django-anymail-status-tracker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: release.yml  ruff.yml
anymail_status_tracker/: admin.py  apps.py  managers.py  models.py  settings.py  signals.py
anymail_status_tracker/debug/: data.py  helpers.py
anymail_status_tracker/management/commands/: create_debugging_sns_event.py  migrate_ses_sns_tracker.py  simulate_sns_event.py
anymail_status_tracker/migrations/: 0001_initial.py
example_proj/: forms.py  settings.py  test.html  urls.py  views.py  wsgi.py
