[tool.poetry]
name = "django-anymail-status-tracker"
version = "0.1.0"
description = "Simple wrapper around django-anymail to receive and persist e-mail status event data"
authors = ["Sebastian Braß <brass@brandpunktmeister.de>"]
readme = "README.md"
packages = [
    { include = "anymail_status_tracker" }
]

[tool.poetry.dependencies]
python = "^3.10"
django-anymail = "^13.1"

[tool.poetry.group.dev.dependencies]
Django = "4.2"
psycopg2 = "^2.9.10"
boto3 = "~=1.40.57"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# linting & formatter
[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-django
    #"DJ",
    # flake8-comprehensions
    "C4",
    # flake8-2020
    "YTT",
    # flake8-gettext
    "INT",
    # flake8-datetimez
    "DTZ",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]
