[project]
name = "django-anymail-status-tracker"
version = "1.1.0"
description = "Simple wrapper around django-anymail to receive and persist e-mail status event data"
authors = [{ name = "Sebastian Braß", email = "brass@brandpunktmeister.de" }, { name = "Fabio Reinsch", email = "fabio.reinsch@brandmeister.de" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["django-anymail[amazon-ses]>=13.1,<14", "django>=4.2,<6"]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.15.7",
]

[tool.uv]
default-groups = "all"
constraint-dependencies = ["django>=4.2,<4.3"]

[tool.uv.build-backend]
module-name = ["anymail_status_tracker"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

# linting & formatter
[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-django
    #"DJ",
    # flake8-comprehensions
    "C4",
    # flake8-2020
    "YTT",
    # flake8-gettext
    "INT",
    # flake8-datetimez
    "DTZ",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
# Group all Django imports into a separate section.
"django" = ["django"]
